# awesome-devops-for-coding-agents

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.cursor/: mcp.json  settings.json  transcript.jsonl
.cursor/commands/: spec-driven.md  tdd.md
.cursor/rules/: bash_deny_list.mdc  cli-patterns.mdc  code-standards.mdc  development-workflow.mdc  logging-patterns.mdc  testing-standards.mdc
bob_the_engineer/: __init__.py  config_templates.py
bob_the_engineer/adapters/: __init__.py  base.py  factory.py  template_engine.py
bob_the_engineer/adapters/claude/: __init__.py  rules_manager.py
bob_the_engineer/adapters/config/: claude-code.yaml  cursor.yaml
bob_the_engineer/adapters/cursor/: __init__.py  rules_manager.py
bob_the_engineer/cli/: __init__.py  app.py  logging_config.py
bob_the_engineer/templates/: __init__.py
bob_the_engineer/templates/cursor-only/: bash_deny_list.mdc
bob_the_engineer/templates/settings/: claude_software_engineer.json  claude_vibe_coder.json  cursor_bash_protection.sh
bob_the_engineer/templates/subagents/: build_test_run.jinja2.md  configure_defaults.jinja2.md  configure_mcp.jinja2.md  configure_rules.jinja2.md  configure_supervisor.jinja2.md  configure_tdd_guard.md  configure_workflows.jinja2.md  detect_conflicting_instructions.jinja2.md  improve_code_quality_checks.jinja2.md  improve_debuggability.jinja2.md  validate_feedback.jinja2.md
bob_the_engineer/templates/workflows/coding/: code-review.jinja2.md  spec-driven.jinja2.md  tdd.jinja2.md
bob_the_engineer/templates/workflows/devops/: 1_start_using_coding_agent.jinja2.md  2_use_coding_agent_effectively.jinja2.md  improve_code_repo.jinja2.md  start_using_coding_agent.jinja2.md  use_coding_agent_effectively.jinja2.md
bob_the_engineer/workflows/improve_code_repo/: prompt.md
bob_the_engineer/workflows/improve_code_repo/agents/prompts/: conflict_detector.md  debuggability_improver.md
bob_the_engineer/workflows/start_using_coding_agent/: prompt.md
bob_the_engineer/workflows/start_using_coding_agent/agents/prompts/: build_test_run.md  configure_defaults.md  configure_rules.md  validate_feedback.md
bob_the_engineer/workflows/use_coding_agent_effectively/: prompt.md
bob_the_engineer/workflows/use_coding_agent_effectively/agents/prompts/: configure_mcp.md  configure_supervisor.md  configure_workflows.md
specs/: design_doc_claude_code.md  design_doc_claude_cursor.md  folder_structure.md  prd.md  subagent_templating_plan.md
specs/workflows/improve_code_repo/: prompt.md
specs/workflows/improve_code_repo/agents/prompts/: improve_code_quality_checks.md
specs/workflows/start_using_coding_agent/: prompt.md
specs/workflows/start_using_coding_agent/agents/prompts/: build_test_run.md  configure_defaults.md  configure_rules.md  configure_tdd_guard.md
specs/workflows/use_coding_agent_effectively/: prompt.md
specs/workflows/use_coding_agent_effectively/agents/prompts/: configure_mcp.md  configure_supervisor.md  configure_workflows.md
tests/: __init__.py  test_adapters.py  test_cli.py
